# cmake_find_package_library_template

./: CMakeLists.txt  README.md
TestLib/include/TestLib/Core/: Core.h
TestLib/src/TestLib/Core/: Core.cpp
cmake/: TestLibConfig.cmake
